# PermeationFit

./: .gitignore  404.html  Readme.md  index.html  mkdocs.yml  pyproject.toml  pyrightconfig.json  summary.tex
DECISIONS/: index.html
docs/: DECISIONS.md  index.md  package-map.md
docs/latex/: Makefile  cheatsheet.tex  finitemethods.tex  summary.tex
docs/reference/: equations.md  history.md  notation.md
docs/theory/: backward-euler.md  diffusion.md  finite_methods.md
examples/: 20260206-compose.ipynb  20260206-run-new-package.ipynb  add_numba.ipynb  backward-euler-stencil.ipynb  heatCN.ipynb  inverse-fit-workflow.ipynb  permeation-inverse-fit-adaptive.ipynb  permeation-inverse-fit.ipynb  playwithnumba.ipynb  test.py
examples/exploring/: playwithnumba_streamlined.ipynb  plot3D.ipynb  test.py
javascripts/: config.js
notebooks/: RunDiffusion.ipynb  Run_diffusion.py.ipynb  Validation.ipynb  add_numba.ipynb  heatCN.ipynb  playwithnumba.ipynb
oldcode/: diffusion.py  pdp_wavefit.py  pydiffuse.py
package-map/: index.html
reference/equations/: index.html
reference/history/: index.html
reference/notation/: index.html
search/: search_index.json
sections/: cheatsheet.tex  permeation.tex
src/permeation/: __init__.py  backward_euler.py  diffusion.py  inverse_fit.py  materials.py  plotting.py  utils.py
src/permeation/inverse/: __init__.py  inverse_fit.py  workflow.py
src/permeation/physics/: __init__.py  (+3 more)
theory/backward-euler/: index.html
theory/diffusion/: index.html
theory/finite-methods/: index.html
theory/finite_methods/: index.html
(+3 files in other folders)
