[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "permeation"
version = "0.1.0"
description = "Numerical solutions for hydrogen permeation through a membrane (1D diffusion with recombination BCs)."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.3",
]

[project.optional-dependencies]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.6",
  "pymdown-extensions>=10.0",
  "mdx_truly_sane_lists>=1.3",
  "mkdocs-glightbox"
]

dev = [
  "jupyterlab>=4.0",
  "ipykernel>=6.0",
  "matplotlib>=3.5",
  "pytest>=7.0",
  "black>=23.0",
  "plotly>=5.18",
  "tqdm>=4.67.1"
]

[tool.setuptools.packages.find]
where = ["src"]
